fixed date form length on mobile devices

--- a/css/queries2.css
+++ b/css/queries2.css
@@ -62,6 +62,25 @@
   }
 }
 
+@media (pointer:none), (pointer:coarse) {
+
+  .form-date-grid{
+    grid-template-columns: 1fr;
+    row-gap: 0.5rem;
+
+    /* justify-items: start; */
+  }
+
+  #form-time-from, #form-time-end {
+    width: 35%;
+  }
+
+  .arrow-container{
+    display: none;
+  }
+
+}
+
 
 /* <= 865px */
 /* @media (max-width: 54.0625em){
